Better log for plan image not found